// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вернуть DashboardWalletWidget 1`] = `
<DashboardWidget
  className="DashboardWalletWidget"
>
  <DashboardWidgetHeader
    title="Списания"
    total="123 ₽"
    url="linkCabinet/wallet/?from=2011-01-02&to=2012-01-02"
  />
  <DashboardWidgetLineChart
    animation={true}
    backgroundColor="#FFF4B7"
    borderColor="#FFDB10"
    chartData={
      Array [
        Object {
          "t": "2019-09-03",
          "y": 92,
        },
        Object {
          "t": "2019-09-04",
          "y": 55,
        },
        Object {
          "t": "2019-09-05",
          "y": 80,
        },
        Object {
          "t": "2019-09-06",
          "y": 63,
        },
        Object {
          "t": "2019-09-07",
          "y": 68,
        },
        Object {
          "t": "2019-09-08",
          "y": 56,
        },
        Object {
          "t": "2019-09-09",
          "y": 14,
        },
        Object {
          "t": "2019-09-10",
          "y": 44,
        },
        Object {
          "t": "2019-09-11",
          "y": 72,
        },
        Object {
          "t": "2019-09-12",
          "y": 72,
        },
        Object {
          "t": "2019-09-13",
          "y": 58,
        },
        Object {
          "t": "2019-09-14",
          "y": 70,
        },
        Object {
          "t": "2019-09-15",
          "y": 53,
        },
        Object {
          "t": "2019-09-16",
          "y": 95,
        },
        Object {
          "t": "2019-09-17",
          "y": 64,
        },
        Object {
          "t": "2019-09-18",
          "y": 52,
        },
        Object {
          "t": "2019-09-19",
          "y": 59,
        },
        Object {
          "t": "2019-09-20",
          "y": 61,
        },
        Object {
          "t": "2019-09-21",
          "y": 43,
        },
        Object {
          "t": "2019-09-22",
          "y": 67,
        },
        Object {
          "t": "2019-09-23",
          "y": 62,
        },
        Object {
          "t": "2019-09-24",
          "y": 61,
        },
        Object {
          "t": "2019-09-25",
          "y": 63,
        },
        Object {
          "t": "2019-09-26",
          "y": 73,
        },
        Object {
          "t": "2019-09-27",
          "y": 61,
        },
        Object {
          "t": "2019-09-28",
          "y": 77,
        },
        Object {
          "t": "2019-09-29",
          "y": 40,
        },
        Object {
          "t": "2019-09-30",
          "y": 76,
        },
        Object {
          "t": "2019-10-01",
          "y": 66,
        },
        Object {
          "t": "2019-10-02",
          "y": 0,
        },
        Object {
          "t": "2019-10-03",
          "y": 0,
        },
      ]
    }
    className="DashboardWalletWidget__chart"
    currency="₽"
    height={125}
    margin={
      Object {
        "bottom": 0,
        "left": 20,
        "right": 30,
        "top": 20,
      }
    }
    showAxis={true}
    showTooltip={true}
    thickness={4}
    width={372}
  />
  <ul
    className="DashboardWalletWidget__legend"
  >
    <li
      className="DashboardWalletWidget__legend-item"
      key="placement"
    >
      <Link
        className="DashboardWalletWidget__legend-link"
        metrika="wallet_widget,placement_click"
        url="linkCabinet/wallet/?products=placement&products=calls&from=2011-01-02&to=2012-01-02"
      >
        <IconSvg
          className="DashboardWalletWidget__icon"
          id="svgID"
          size="16"
          style={
            Object {
              "color": "#DB3727",
            }
          }
        />
        <span
          className="DashboardWalletWidget__legend-text"
        >
          Размещение
        </span>
        <div
          className="DashboardWalletWidget__count"
        >
          10
           ₽
        </div>
      </Link>
    </li>
    <li
      className="DashboardWalletWidget__legend-item"
      key="vas"
    >
      <Link
        className="DashboardWalletWidget__legend-link"
        metrika="wallet_widget,vas_click"
        url="linkCabinet/wallet/?products=premium&from=2011-01-02&to=2012-01-02"
      >
        <IconSvg
          className="DashboardWalletWidget__icon"
          id="svgID"
          size="16"
          style={
            Object {
              "color": "#2276D3",
            }
          }
        />
        <span
          className="DashboardWalletWidget__legend-text"
        >
          Продвижение
        </span>
        <div
          className="DashboardWalletWidget__count"
        >
          20
           ₽
        </div>
      </Link>
    </li>
    <li
      className="DashboardWalletWidget__legend-item"
      key="other"
    >
      <Link
        className="DashboardWalletWidget__legend-link"
        metrika="wallet_widget,other_click"
        url="linkCabinet/wallet/?products=vin&from=2011-01-02&to=2012-01-02"
      >
        <IconSvg
          className="DashboardWalletWidget__icon"
          id="svgID"
          size="16"
          style={
            Object {
              "color": "#6900D1",
            }
          }
        />
        <span
          className="DashboardWalletWidget__legend-text"
        >
          Остальное
        </span>
        <div
          className="DashboardWalletWidget__count"
        >
          30
           ₽
        </div>
      </Link>
    </li>
  </ul>
  <DashboardWidgetButton
    metrikaEvents="wallet_widget.more_button_click"
    text="Подробнее"
    url="linkCabinet/wallet/?from=2011-01-02&to=2012-01-02"
  />
</DashboardWidget>
`;

exports[`должен вернуть DashboardWalletWidget, если !hasOffers 1`] = `
<DashboardWidget
  className="DashboardWalletWidget"
>
  <DashboardWidgetHeader
    title="Списания"
    url="linkCabinet/wallet/?from=2011-01-02&to=2012-01-02"
  />
  <DashboardWidgetAlert
    message="После добавления объявлений здесь будет отображаться статистика принятых и пропущенных вызовов"
  />
</DashboardWidget>
`;

exports[`должен вернуть DashboardWalletWidget, если hasOffers && !hasStats 1`] = `
<DashboardWidget
  className="DashboardWalletWidget"
>
  <DashboardWidgetHeader
    title="Списания"
    url="linkCabinet/wallet/?from=2011-01-02&to=2012-01-02"
  />
  <DashboardWidgetAlert
    hasIcon={true}
    message="Расходы за выбранный период отсутствуют"
  />
</DashboardWidget>
`;
